--- a/background.tex
+++ b/background.tex
@@ -227,7 +227,7 @@ PROV-JSON is used for representing PROV-DM data in JSON(Javascript Object Notati
 \end{figure}
 
 
-\section Policy Model
+\section{Policy Model}
 
 \subsection{eXtensible Access Control Markup Language}
  XACML is an access control policy language that allows the creation and enforcement of policies written in XML. It is a standard specification developed by the Organization of Advancement of Structured Information Standards(OASIS). Since it is written in XML, this framework allows for extensible and flexible policy documents. XACML consists of three major components which are involved in policy generation, evaluation and enforcement. The components of XACML are described below: 
