--- a/chapter3.tex
+++ b/chapter3.tex
@@ -61,7 +61,7 @@ To better explain the provenance-collection model, a use case is illustrated in 
 \begin{figure}[h]
 \begin{center}
 
-\includegraphics[width=4.0in]{provenance_model.png}    
+\includegraphics[width=4.0in]{prov_model_usecase.png}    
 \end{center}
 \caption{Provenance-model use case}
 \label{prov_model}
