--- a/refrences.bib
+++ b/refrences.bib
@@ -30,6 +30,14 @@
 	howpublished = "\url{https://www.w3.org/TR/prov-dm/}"
 }
 
+@TECHREPORT {prov_json,
+    title       = "PROV-JSON: The PROV Data Model",
+    institution = "W3C",
+    year        = "2013",
+    month       = "Apr",
+    howpublished = "\url{http://www.w3.org/Submission/2013/SUBM-prov-json-20130424}"
+}
+
 @inproceedings{park_provenance-based_2012,
 	title = {A provenance-based access control model},
 	doi = {10.1109/PST.2012.6297930},
@@ -611,7 +619,7 @@ doi="10.1007/978-3-319-17016-9_2",
 url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
 }
 
-@article{zawoadfecloud,
+@inproceedings{zawoadfecloud,
   title={FECloud: A Trustworthy Forensics-Enabled Cloud Architecture},
   author={Zawoad, Shams and Hasan, Ragib},
   booktitke= {11th Annual IFIP WG 11.9 International Conference on Digital Forensics}, 
@@ -627,14 +635,7 @@ url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
   organization={Springer}
 }
 
-@TECHREPORT {prov_json,
-    title       = "PROV-DM: The PROV Data Model",
-    institution = "W3C",
-    year        = "2013",
-    month       = "apr",
-    
-     howpublished = "\url{http://www.w3.org/Submission/2013/SUBM-prov-json-20130424}"
-}
+
 
 @inproceedings{Bates2014LinuxPM,
   title={Linux Provenance Modules: Secure Provenance Collection for the Linux Kernel},
@@ -666,6 +667,9 @@ url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
    month = may,
    year = {2012}
 }
+
+
+
 
 
 
