--- a/chapter2.tex
+++ b/chapter2.tex
@@ -20,13 +20,11 @@ the kernel space. PASS is composed of 3 major components: provenance collector, 
 
 
 \textcolor{red}{ 
-Our approach looks at data provenance with data pruning as a requirement since we are dealing with devices with limited memory and storage capabilities. We employ a policy based approach which allows to provenance pruning by storing what provenance data is considered important to a specific organization. Also,on like PASS, our system collects not just system level provenance but also application level provenance.}
+Our approach looks at data provenance with data pruning as a key requirement since we are dealing with devices with limited memory and storage capabilities. We employ a policy based approach which allows provenance pruning by storing what provenance data is considered important to a specific organization. Also,unlike PASS, our system collects not just system level provenance but also application level provenance.}
 
 \subsection{HiFi}
 Bates et al. \cite{hi_fi}  developed system level provenance collection framework for the Linux kernel using Linux Provenance Modules(LPM), this framework tracks system level provenance such as interprocess communication, networking, and kernel activities. This is achieved by mediating access to kernel objects using Linux Security Model(LSM) which is a framework that was designed for providing custom access control into the Linux kernel. It consists of a set of hooks which executed before access decision is made. LSM was designed to avoid problem created by direct system call interception. The provenance information collected from the kernel space is securely transmitted to the provenance recorder in the user space. 
-\par HiFi contains three components: provenance collector, provenance log and provenance handler. The collector and log are contained in the kernel space while the handler is contained in the user space. The log is a storage medium which transmits the provenance data to the user space. The collector uses LSM which resides in the kernel space. The collector records provenance data and writes it to the provenance log. The handler reads the provenance record from the log. This approach to collecting provenance data differs from our work since we focus on embedded systems and are concerned with input and output (I/O) data, which primarily involve sensor and actuator readings. 
-
-\textcolor{red}{ On the other hand, HiFi deals with collecting system level events with might incurr additional overhead as compared to collecting application level provenance. HiFi is engineered to work solely on the Linux operating system. Embedded systems that do not run on Linux OS will not be able to incorporate HiFi. } 
+\par HiFi contains three components: provenance collector, provenance log and provenance handler. The collector and log are contained in the kernel space while the handler is contained in the user space. The log is a storage medium which transmits the provenance data to the user space. The collector uses LSM which resides in the kernel space. The collector records provenance data and writes it to the provenance log. The handler reads the provenance record from the log. This approach to collecting provenance data differs from our work since we focus on embedded systems and are concerned with input and output (I/O) data, which primarily involve sensor and actuator readings. \textcolor{red}{ On the other hand, HiFi deals with collecting system level events which might incurr additional overhead when compared to collecting application level provenance. HiFi is engineered to work solely on the Linux operating system. Embedded systems that do not run on Linux OS will not be able to incorporate HiFi. } 
 
 
 \subsection{RecProv}
@@ -67,7 +65,7 @@ Tariq et al. \cite{tariq_towards_2012} all developed a provenance collection sys
 
 
 \textcolor{red}{
-One major limitation to this approach of collecting application level provenance is that a user is required to have the source code of the specific application in which provenance data is required. Also, provenance collection is limited to function's exit and entry points. Provenance collection deals with data pruning by allowing a user to specify what provenance data to collect which is similar to our policy based apporach for efficient provenance data storage. However, one major limitation exists in which provenance is only  collected from function calls and the source code of the application will have to be available in order to collect provenance since provenance is collected during source code compilation.}
+One major limitation to this approach of collecting application level provenance is that a user is required to have the source code of the specific application in which provenance data is required. Also, provenance collection is limited to function's exit and entry points. Provenance collection deals with data pruning by allowing a user to specify what provenance data to collect which is similar to our policy based approach for efficient provenance data storage.}
 
 
 \subsection{Provenance from Log Files: a BigData Problem}
@@ -106,7 +104,7 @@ Grouth et al \cite{groth} developed a provenance collection system, PReServ whic
 
 
 
-\textcolor{red}{PReServ was developed to address the needs of a specific application domain(Scientific experiments). It deals with recording process documentation of Service Oriented Architecture (SOA)and collects P-assertions which are assertions made about the execution(i.e messages sent and received, state information) of actions by actors. The provenance collected does not demonstrate causality and dependency between objects.}
+\textcolor{red}{PReServ was developed to address the needs of specific application domain (Scientific experiments). It deals with recording process documentation of Service Oriented Architecture (SOA) and collects P-assertions which are assertions made about the execution (i.e messages sent and received, state information) of actions by actors. The provenance collected by PReServ does not demonstrate causality and dependency between objects.}
 
 
 
@@ -130,7 +128,7 @@ Ali et al \cite{Ali:2013:PPL:2569433.2569893} provides a provenance model, cProv
 
 Hussein et al. \cite{hussain_secure_2014} encode the provenance of the path in which  sensor provenance travels using arithmetic coding, a data compression algorithm. Arithmetic coding assigns intervals to a string of characters by  cumulative probabilities of each character contained in the string. It assign probabilities by monitoring the activities of the WSN, this is known as the training phase. In this phase the number of times a node appears in a packet is counted. Each node in the WSN is regarded as a symbol. This is used as input to the arithmetic coding algorithm which generates a variable interval for the combination of symbols. The WSN contains a Base Station(BS) and a network of nodes. The BS is in charge of verifying the integrity of the packets sent. It is also where the encoded characters using arithmetic coding are decoded.  For their application, provenance is referred to as the path in which data travels to the BS. Here, provenance is divided into two types: Simple provenance in which data generated from the leaf nodes, are forwarded to surrounding nodes towards the BS. In the other form of provenance, data is aggregated at an aggregation node and forwarded to a BS. Each node in the WSN is represented as a string of characters and is encoded using arithmetic coding. The BS is responsible for decoding encoded provenance information. Provenance is encoded at the respective nodes and forwarded to the next node in the sensor network. The BS recovers characters the same way they were encoded. It also receives the encoded interval to which it uses to decode characters by using the probability values saved in its storage.
 
-\textcolor{red}{ One limitation to their approach of provenance pruning is that provenance considered as the path in which data travels to get to the base station and not the data that is transmitted itself. Provenance data collected is sensor id represented as characters in which arithmetic coding compression technique is applied to. Our approach look at not just the who of provenance but also all other aspects of provenance is considered. }
+\textcolor{red}{ One limitation to their approach of provenance pruning is that provenance is considered as the path in which data travels to get to the base station and not the data that is transmitted itself. Provenance data collected are sensor ids which are represented as single characters. }
 
 
 
