--- a/background.tex
+++ b/background.tex
@@ -218,7 +218,7 @@ PROV-JSON is used for representing PROV-DM data in JSON(Javascript Object Notati
 \begin{figure}[h]
 \begin{center}
 
-\includegraphics[height=5in]{prov_json.png}
+\includegraphics[height=5.7in]{prov_json_edit.png}
 \end{center}
 \caption{PROV-JSON MODEL \copyright \cite{prov_json}}
 
