--- a/chapter3.tex
+++ b/chapter3.tex
@@ -97,7 +97,7 @@ Our goal is to create a provenance-aware system which records I/O operations on 
 
 \item Neo4j, a graph database which allows optimized querying of graph data. Since provenance represents causal dependencies, it is ideal to use a graph database to store the relationships between objects
 
-\item lttng, a software tool for collecting system level trace on Linux system. 
+%\item lttng, a software tool for collecting system level trace on Linux system. 
 
 \item Babeltrace:  This is a trace converter tool. It contains plugins used to convert traces from one format into another. 
 
