--- a/refrences.bib
+++ b/refrences.bib
@@ -79,21 +79,14 @@ on root volumes, especially during early boot. In this paper we describe an appr
 }
 
 
+
 @inproceedings{bates_trustworthy_2015,
- author = {Bates, Adam and Tian, Dave and Butler, Kevin R. B. and Moyer, Thomas},
- title = {Trustworthy Whole-system Provenance for the Linux Kernel},
- booktitle = {Proceedings of the 24th USENIX Conference on Security Symposium},
- series = {SEC'15},
- year = {2015},
- isbn = {978-1-931971-232},
- location = {Washington, D.C.},
- pages = {319--334},
- numpages = {16},
- url = {http://dl.acm.org/citation.cfm?id=2831143.2831164},
- acmid = {2831164},
- publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
-} 
+  title={Trustworthy whole-system provenance for the Linux kernel},
+  author={Bates, Adam and Tian, Dave Jing and Butler, Kevin RB and Moyer, Thomas},
+  booktitle={24th USENIX Security Symposium (USENIX Security 15)},
+  pages={319--334},
+  year={2015}
+}
 
 
 
@@ -113,6 +106,8 @@ on root volumes, especially during early boot. In this paper we describe an appr
 	year = {2012},
 	keywords = {data provenance, forensics, malware, reference monitor},
 	pages = {259--268}
+	
+	
 }
 
 @incollection{gessiou_towards_2012,
@@ -281,7 +276,7 @@ date ={2005}
 	urldate = {2016-09-18},
 	file = {eXtensible Access Control Markup Language (XACML) Version 3.0:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/E4SCC524/xacml-3.0-core-spec-os-en.html:text/html},
 	
-	howpublished = "\url{http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html}"
+	howpublished = {"\url{http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html}"}
 }
 
 @article{gubbi_internet_2013,
@@ -455,7 +450,7 @@ date ={2005}
  url = {http://dl.acm.org/citation.cfm?id=2342875.2342881},
  acmid = {2342881},
  publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
+ address = {Berkeley, CA, USA}
 } 
 
 
@@ -466,7 +461,7 @@ date ={2005}
     year        = {2015},
     month       = {Sep}, 
     
-   howpublished = "\url{https://www.rapid7.com/docs/Hacking-IoT-A-Case-Study-on-Baby-Monitor-Exposures-and-Vulnerabilities.pdf}" 
+   howpublished = {\url{https://www.rapid7.com/docs/Hacking-IoT-A-Case-Study-on-Baby-Monitor-Exposures-and-Vulnerabilities.pdf}}
     
     
 }
@@ -480,7 +475,7 @@ date ={2005}
     
     note = {Accessed: 2016-10-01},
     
-     howpublished = "\url{https://www.cisco.com/c/dam/en_us/about/ac79/docs/innov/IoT_IBSG_0411FINAL.pdf}" 
+     howpublished = {\url{https://www.cisco.com/c/dam/en_us/about/ac79/docs/innov/IoT_IBSG_0411FINAL.pdf}}
      
      
 }
@@ -492,7 +487,7 @@ date ={2005}
  year = {2000},
  isbn = {1-55860-558-4},
  publisher = {Morgan Kaufmann Publishers Inc.},
- address = {San Francisco, CA, USA},
+ address = {San Francisco, CA, USA}
 } 
 
 @article{Xie:2016:UID:2936026.2936232,
@@ -512,7 +507,7 @@ date ={2005}
  acmid = {2936232},
  publisher = {Elsevier Science Publishers B. V.},
  address = {Amsterdam, The Netherlands, The Netherlands},
- keywords = {False alarm, Forensic analysis, Intrusion detection, Provenance},
+ keywords = {False alarm, Forensic analysis, Intrusion detection, Provenance}
 } 
 
 @inproceedings{King:2003:BI:945445.945467,
@@ -530,7 +525,7 @@ date ={2005}
  acmid = {945467},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {computer forensics, information flow, intrusion analysis},
+ keywords = {computer forensics, information flow, intrusion analysis}
 } 
 
 
@@ -546,7 +541,7 @@ date ={2005}
  url = {http://dl.acm.org/citation.cfm?id=1525908.1525909},
  acmid = {1525909},
  publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
+ address = {Berkeley, CA, USA}
 } 
 
 
@@ -565,7 +560,7 @@ date ={2005}
  acmid = {2569893},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
- keywords = {policy language, provenance, cloud, cProvl, cProv, Prov, data traceability, XACML},
+ keywords = {policy language, provenance, cloud, cProvl, cProv, Prov, data traceability, XACML}
 } 
 
 @inproceedings{Ali:2014:PPC:2977935.2977949,
@@ -583,7 +578,7 @@ date ={2005}
  acmid = {2977949},
  publisher = {Springer-Verlag New York, Inc.},
  address = {New York, NY, USA},
- keywords = {Cloud, Prov, Provenance, Share, XACML, cProv, cProvl},
+ keywords = {Cloud, Prov, Provenance, Share, XACML, cProv, cProvl}
 } 
 
 @Book{TCDP1999,
@@ -620,13 +615,13 @@ address="Cham",
 pages="17--25",
 isbn="978-3-319-17016-9",
 doi="10.1007/978-3-319-17016-9_2",
-url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
+url={"http://dx.doi.org/10.1007/978-3-319-17016-9_2"}
 }
 
 @inproceedings{zawoadfecloud,
   title={FECloud: A Trustworthy Forensics-Enabled Cloud Architecture},
   author={Zawoad, Shams and Hasan, Ragib},
-  booktitke= {11th Annual IFIP WG 11.9 International Conference on Digital Forensics}, 
+  booktitke= {11th Annual IFIP WG 11 International Conference on Digital Forensics}, 
   year = {2015}
 }
 
@@ -659,7 +654,7 @@ url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
  url = {http://dl.acm.org/citation.cfm?id=2814579.2814586},
  acmid = {2814586},
  publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
+ address = {Berkeley, CA, USA}
 } 
 
 @inproceedings{asiaccs12-vijayakumar,
@@ -687,7 +682,7 @@ url="http://dx.doi.org/10.1007/978-3-319-17016-9_2"
 	day =		2,
 	abstract =	{This document describes a simple client/server model for supporting policy control over QoS signaling protocols. [STANDARDS-TRACK]},
 	
-	howpublished = "\url{https://tools.ietf.org/html/rfc2748}"	
+	howpublished = {\url{https://tools.ietf.org/html/rfc2748}}	
 }
 
 
