--- a/refrences.bib
+++ b/refrences.bib
@@ -27,6 +27,7 @@
 	url = {https://www.w3.org/TR/prov-dm/},
 	urldate = {2016-09-15},
 	file = {PROV-DM\: The PROV Data Model:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/WPH6IJXZ/prov-dm.html:text/html},
+	note = {Accessed: 2016-10-01},
 	howpublished = {\url{https://www.w3.org/TR/prov-dm/}}
 }
 
@@ -35,7 +36,8 @@
     institution = {W3C},
     year        = {2013},
     month       = {Apr},
-    howpublished = {\url{http://www.w3.org/Submission/2013/SUBM-prov-json-20130424}}
+    howpublished = {\url{http://www.w3.org/Submission/2013/SUBM-prov-json-20130424}},
+    note = {Accessed: 2016-10-01}
 }
 
 @inproceedings{park_provenance-based_2012,
@@ -275,8 +277,9 @@ date ={2005}
 	url = {http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html},
 	urldate = {2016-09-18},
 	file = {eXtensible Access Control Markup Language (XACML) Version 3.0:/Users/ebelechukwu/Library/Application Support/Zotero/Profiles/17a8i7ac.default/zotero/storage/E4SCC524/xacml-3.0-core-spec-os-en.html:text/html},
+	 note = {Accessed: 2016-10-01},
+	howpublished = {\url{http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html}}
 	
-	howpublished = {"\url{http://docs.oasis-open.org/xacml/3.0/xacml-3.0-core-spec-os-en.html}"}
 }
 
 @article{gubbi_internet_2013,
@@ -460,8 +463,8 @@ date ={2005}
     institution = {Rapid7},
     year        = {2015},
     month       = {Sep}, 
-    
-   howpublished = {\url{https://www.rapid7.com/docs/Hacking-IoT-A-Case-Study-on-Baby-Monitor-Exposures-and-Vulnerabilities.pdf}}
+   howpublished = {\url{https://www.rapid7.com/docs/Hacking-IoT-A-Case-Study-on-Baby-Monitor-Exposures-and-Vulnerabilities.pdf}},
+   note = {Accessed: 2016-10-01}
     
     
 }
@@ -594,6 +597,7 @@ date ={2005}
     institution = "EMC  Corporation",
     year        = "2012",
     month       = "apr",
+    note = {Accessed: 2016-10-01},
     
     howpublished = "\url{https://www.emc.com/collateral/analyst-reports/idc-the-digital-universe-in-2020.pdf}"
 }
@@ -621,14 +625,14 @@ url={"http://dx.doi.org/10.1007/978-3-319-17016-9_2"}
 @inproceedings{zawoadfecloud,
   title={FECloud: A Trustworthy Forensics-Enabled Cloud Architecture},
   author={Zawoad, Shams and Hasan, Ragib},
-  booktitke= {11th Annual IFIP WG 11 International Conference on Digital Forensics}, 
+  bookTitle= {11th Annual IFIP WG 11 International Conference on Digital Forensics}, 
   year = {2015}
 }
 
 @inproceedings{braun2006issues,
   title={Issues in automatic provenance collection},
   author={Braun, Uri and Garfinkel, Simson and Holland, David A and Muniswamy-Reddy, Kiran-Kumar and Seltzer, Margo I},
-  booktitle={International Provenance and Annotation Workshop},
+  bookTitle={International Provenance and Annotation Workshop},
   pages={171--183},
   year={2006},
   organization={Springer}
@@ -670,7 +674,6 @@ url={"http://dx.doi.org/10.1007/978-3-319-17016-9_2"}
 @misc{rfc2748,
 	series =	{Request for Comments},
 	number=		2748,
-	howpublished=	{RFC 2748},
 	publisher =	{RFC Editor},
 	doi =		{10.17487/rfc2748},
 	url =		{https://rfc-editor.org/rfc/rfc2748.txt},
@@ -681,7 +684,7 @@ url={"http://dx.doi.org/10.1007/978-3-319-17016-9_2"}
 	month =		mar,
 	day =		2,
 	abstract =	{This document describes a simple client/server model for supporting policy control over QoS signaling protocols. [STANDARDS-TRACK]},
-	
+	note = {Accessed: 2016-10-01},
 	howpublished = {\url{https://tools.ietf.org/html/rfc2748}}	
 }
 
