--- a/thesis.tex
+++ b/thesis.tex
@@ -28,7 +28,8 @@
 % the title contains more than one line, the lines should be
 % of decreasing length, giving the look of an inverted pyramid.
 
-\title{DATA PROVENANCE FOR INTERNET OF THINGS (IOT)}
+%\title{DATA PROVENANCE FOR INTERNET OF THINGS (IOT)}
+\title{TOWARDS A PROVENANCE-AWARE INTERNET OF THINGS (IOT) SYSTEM}
 % If the title is more than one line, separate the lines with \\[1pc]
 % as shown below:
 %\title{THIS IS THE VERY FIRST LINE\\[1pc]
@@ -40,7 +41,7 @@
 % Uncomment to put degrees on title page
 \AuthorDegrees{M.S.}
 \date{FEB 2016}
-\DeptName{Department of Electrical and Computer Science}
+\DeptName{Department of Electrical Engineering and Computer Science}
 
 \CommitteeChair{Gedare Bloom, Ph.D.}
 %\CommitteeChair{Gedare Bloom, Chair, Ph.D.}
