--- a/chapter1.tex
+++ b/chapter1.tex
@@ -4,7 +4,7 @@
 In recent years,the Internet of Things (IoT) has gathered significant traction which has led to the exponential increase in the number of devices connected to the internet. According to a report released by Cisco \cite{dave}, it is estimated that a total of 50 million devices will be connected to the internet by the year 2020. Data is generated in an enormous amount in real-time by sensors and actuators contained in these devices. With the vast amounts of connected heterogeneous devices,
 security and privacy risks are increased. Rapid7 \cite{rapid7}, an  internet security and analytics organization, released a report highlighting vulnerabilities that exist on select IoT devices. In their report, they outline  vulnerabilities in
 baby monitors which allowed intruders unauthorized access to devices
-whereby a malicious intruder can view live feeds from a remote location. With provenance information, we can generate an activity trail which can be further analyzed to determine who, where, and how, a malicious attack occured in order to provide preventive measures to eradicate future or current attacks. \cite{cheney_provenance_2009}. 
+whereby a malicious intruder can view live feeds from a remote location. With provenance information, we can generate an activity trail which can be further analyzed to determine who, where, and how, a malicious attack occurred in order to provide preventive measures to eradicate future or current attacks. \cite{cheney_provenance_2009}. 
 \par In an IoT system, most of the interconnected heterogeneous devices (things) are embedded systems which
 require lightweight and efficient solutions as compared to general purpose
 systems. This requirement is attributed to the constrained memory and computing power of such
@@ -17,7 +17,7 @@ IoT system. This level of transparency can be translated to various levels acros
 transactions performed on devices connected in an IoT network. 
 
 
-Most provenance-aware systems collect a fixed kind of provenance data (e.g system calls, files, and process)  \cite{King:2003:BI:945445.945467, altintas,glavic_case_2011}. There is a need to create provenance-aware systems which allows for the flexibility in specifying the kinds of provenance data to collect. Collecting fixed kinds of provenance leads to  an increase in the amount of noisy provenance data(ie unrelated provenance data which is not required by an organization). By doing this, we provide pruning capabilities \cite{braun2006issues} of provenance data. Policy specification and implementation details are discussed in chapter 4.  
+Most provenance-aware systems collect a fixed kind of provenance data (e.g system calls, files, and process)  \cite{King:2003:BI:945445.945467, altintas,glavic_case_2011}. There is a need to create provenance-aware systems which allows for the flexibility in specifying the kinds of provenance data to collect. Collecting fixed kinds of provenance leads to  an increase in the amount of noisy provenance data(i.e. unrelated provenance data which is not required by an organization). By doing this, we provide pruning capabilities \cite{braun2006issues} of provenance data. Policy specification and implementation details are discussed in chapter 4.  
 
 
 
