--- a/chapter2.tex
+++ b/chapter2.tex
@@ -77,7 +77,7 @@ Goshal et al \cite{ghoshal_provenance_2013} developed a framework for collecting
 
 
 \subsection{Towards a Universal Data Provenance Framework using Dynamic Instrumentation}
-Gessiou et al \cite{gessiou_towards_2012} propose a dynamic instrumentation framework for data provenance collection that is universal and does not incur the overhead of kernel or source code modifications. This is achieved by using DTrace, a dynamic instumentation utility that allows for the instrumentation of user-level and kernel-level code and with no overhead cost when disabled. 
+Gessiou et al \cite{gessiou_towards_2012} propose a dynamic instrumentation framework for data provenance collection that is universal and does not incur the overhead of kernel or source code modifications. This is achieved by using DTrace, a dynamic instrumentation utility that allows for the instrumentation of user-level and kernel-level code and with no overhead cost when disabled. 
 
 The goal is to provide an easy extension to add provenance collection on any application regardless of its size or complexity. Provenance collection is implemented on the file system using PASS and evaluated on a database(SQLite) and a web browser(Safari). 
 The logging component monitors all system calls for processes involved. The logging component contains information such as system-call arguments, return value, user id, process name,and timestamp. The logging components includes functionalities to collect library and functional calls. The authors argue that applying data provenance to different layers of the software stack can provide varying levels of information. Provenance needs to be captured at the layer in which it is closest to the information that is needed to be captured. Provenance information that pertains to complex system activities such as a web browser or a database are collected. The information is collected from a process system-call and functional-call based on valid entry points contained in the process. DTrace dynamic instrumentation helps in discovering interesting paths in a system in which data propagates. This helps users use this information to collect a more accurate provenance data.
@@ -91,7 +91,7 @@ provenance signifies that the more similar a data value is, the higher the trust
 Also, the more the provenance of similar values differ, the higher their trust score. The trust score of a system is affected by the trust score of the sensor that forwards data to the system. Provenance is determined by the path in which data travels through the sensor network. This work differs from our approach since the authors focus on creating a trust score
 of nodes connected in a sensor network using data provenance and do not emphasize
 how the provenance data is collected. We are focused on creating a
-provenance aware system for sensor-aactuator I/O operations which may be used to ensure trust of
+provenance aware system for sensor-actuator I/O operations which may be used to ensure trust of
 connected devices. 
 
 \subsection{Backtracking Intrusions}
